--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,4 +13,6 @@
 
 body {
   margin: 0;
+  background-color: transparent;
+  z-index: -100;
 }
